--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -33,6 +33,7 @@ jobs:
 
       - name: Gradle 빌드
         run: |
+          cd server
           mkdir -p src/main/resources/
           echo ${{ secrets.APPLICATION_PROD_YML }} | base64 -d > src/main/resources/application-prod.yml
           chmod +x gradlew
@@ -50,6 +51,7 @@ jobs:
       # - name: Upload build file to S3 and trigger CodeDeploy
       #   if: ${{ github.ref == 'refs/heads/main' }}
       #   run: |
+      #     cd server
       #     cp build/libs/*-*.jar deploy-main/
       #     mkdir -p deploy && cp -r deploy-main/* deploy/
       #     zip -r deploy.zip deploy
