--- a/.github/workflows/client-cicd.yml
+++ b/.github/workflows/client-cicd.yml
@@ -29,16 +29,16 @@ jobs:
           npm run build
         working-directory: client
 
-      # - name: Configure AWS credentials
-      #   if: ${{ github.ref == 'refs/heads/main' }}
-      #   uses: aws-actions/configure-aws-credentials@v3
-      #   with:
-      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     aws-region: ${{ secrets.AWS_REGION }}
+      - name: Configure AWS credentials
+        if: ${{ github.ref == 'refs/heads/main' }}
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-      # - name: Deploy to Main S3 and Invalidate CloudFront cache
-      #   if: ${{ github.ref == 'refs/heads/main' }}
-      #   run: |
-      #     aws s3 sync ./build s3://${{ secrets.AWS_S3_CLIENT_MAIN_BUCKET_NAME }}
-      #     aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_CLOUDFRONT_MAIN_DISTRIBUTION_ID }} --paths "/*"
+      - name: Deploy to Main S3 and Invalidate CloudFront cache
+        if: ${{ github.ref == 'refs/heads/main' }}
+        run: |
+          aws s3 sync ./dist s3://${{ secrets.AWS_S3_CLIENT_MAIN_BUCKET_NAME }}
+          aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_CLOUDFRONT_MAIN_DISTRIBUTION_ID }} --paths "/*"
