--- a/.github/workflows/client-cicd.yml
+++ b/.github/workflows/client-cicd.yml
@@ -25,7 +25,9 @@ jobs:
 
       - name: Build
         run: |
+          echo ${{ secrets.MAIN_ENV }} | base64 -d > .env
           npm install
+          npm run lint
           npm run build
         working-directory: client
 
