--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -40,27 +40,41 @@ jobs:
           ./gradlew build
         shell: bash
 
-      # - name: Configure AWS credentials
-      #   if: ${{ github.ref == 'refs/heads/main' }}
-      #   uses: aws-actions/configure-aws-credentials@v1
-      #   with:
-      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     aws-region: ap-northeast-2
+      - name: Configure AWS credentials
+        if: ${{ github.ref == 'refs/heads/main' }}
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-      # - name: Upload build file to S3 and trigger CodeDeploy
-      #   if: ${{ github.ref == 'refs/heads/main' }}
-      #   run: |
-      #     cd server
-      #     cp build/libs/*-*.jar deploy-main/
-      #     mkdir -p deploy && cp -r deploy-main/* deploy/
-      #     zip -r deploy.zip deploy
+      - name: Build and push image to Amazon ECR
+        if: ${{ github.ref == 'refs/heads/main' }}
+        env:
+          REGISTRY: 229262694893.dkr.ecr.ap-northeast-2.amazonaws.com
+          REPOSITORY: test-server-repository
+          IMAGE_TAG: latest
+        run: |
+          aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin $REGISTRY
+          cp build/libs/*-*.jar deploy-main/
+          cd deploy-main
+          docker build -t server-main .
+          rm build/libs/*-*.jar
+          docker tag $REPOSITORY:$IMAGE_TAG $REGISTRY/$REPOSITORY:$IMAGE_TAG
+          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
-      #     aws s3 cp deploy.zip s3://${{ secrets.AWS_S3_DEPLOY_MAIN_BUCKET_NAME }}/deploy.zip
+      - name: Upload build file to S3 and trigger CodeDeploy
+        if: ${{ github.ref == 'refs/heads/main' }}
+        run: |
+          cd server
+          mkdir -p deploy && cp -r deploy-main/* deploy/
+          zip -r deploy.zip deploy
 
-      #     aws deploy create-deployment \
-      #     --application-name ${{ secrets.AWS_CODEDEPLOY_MAIN_APP_NAME }} \
-      #     --deployment-config-name CodeDeployDefault.AllAtOnce \
-      #     --deployment-group-name ${{ secrets.AWS_CODEDEPLOY_MAIN_GROUP_NAME }} \
-      #     --file-exists-behavior OVERWRITE \
-      #     --s3-location bucket=${{ secrets.AWS_S3_DEPLOY_MAIN_BUCKET_NAME }},bundleType=zip,key=deploy.zip
+          aws s3 cp deploy.zip s3://${{ secrets.AWS_S3_DEPLOY_MAIN_BUCKET_NAME }}/deploy.zip
+
+          aws deploy create-deployment \
+          --application-name ${{ secrets.AWS_CODEDEPLOY_MAIN_APP_NAME }} \
+          --deployment-config-name CodeDeployDefault.AllAtOnce \
+          --deployment-group-name ${{ secrets.AWS_CODEDEPLOY_MAIN_GROUP_NAME }} \
+          --file-exists-behavior OVERWRITE \
+          --s3-location bucket=${{ secrets.AWS_S3_DEPLOY_MAIN_BUCKET_NAME }},bundleType=zip,key=deploy.zip
