--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -56,6 +56,7 @@ jobs:
           IMAGE_TAG: latest
         run: |
           aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin $REGISTRY
+          cd server
           cp build/libs/*-*.jar deploy-main/
           cd deploy-main
           docker build -t server-main .
