<fix>: server ci workflow

--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -60,7 +60,7 @@ jobs:
           cp build/libs/*.jar deploy-main/
           cd deploy-main
           docker build -t server-main .
-          rm  deploy-main/*.jar
+          rm *.jar
           docker tag $REPOSITORY:$IMAGE_TAG $REGISTRY/$REPOSITORY:$IMAGE_TAG
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
