<fix>: client cicd workflow

--- a/.github/workflows/client-cicd.yml
+++ b/.github/workflows/client-cicd.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Build
         run: |
-          echo ${{ secrets.MAIN_ENV }} | base64 -d > .env
+          echo ${{ secrets.MAIN_ENV }} | base64 -d > .env.production
           npm install
           npm run lint
           npm run build
