--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Build and push image to Amazon ECR
         if: ${{ github.ref == 'refs/heads/main' }}
         env:
-          REGISTRY: 229262694893.dkr.ecr.ap-northeast-2.amazonaws.com
+          REGISTRY: 442042508341.dkr.ecr.us-east-2.amazonaws.com
           REPOSITORY: test-server-repository
           IMAGE_TAG: latest
         run: |
