--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   server-main:
-    image: "229262694893.dkr.ecr.ap-northeast-2.amazonaws.com/test-server-repository:latest"
+    image: "442042508341.dkr.ecr.us-east-2.amazonaws.com/test-server-repository:latest"
     restart: always
     container_name: "server-main"
     ports:
